[tool.poetry]
name = "renders"
version = "0.1.0"
description = ""
authors = ["edayot <pro.e.dayot@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
model-resolver = ">=1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
